# encore

./: Cargo.toml  README.md
encore-audio/: Cargo.toml
encore-audio/src/: lib.rs
encore-cli/: Cargo.toml
encore-cli/src/: input.rs  tui.rs
encore-configuration/: Cargo.toml
encore-configuration/src/: lib.rs
encore-core/: Cargo.toml
encore-core/src/: macros.rs  main.rs  song.rs  threading.rs
encore-playlist/: Cargo.toml
encore-playlist/src/: file_format.rs  lib.rs
encore-shared/: Cargo.toml
encore-shared/src/: lib.rs
encore-static/: Cargo.toml
encore-static/src/: lib.rs
src/: configuration.rs  input.rs  lib.rs  main.rs  mpris_handler.rs  tui.rs
