# cargo-features = ["codegen-backend"]

[workspace]
resolver = "2"
# `encore-*` instead?
members = [ "encore-configuration", "encore-playlist", "encore-shared", "encore-core" ]

[workspace.dependencies]
# encore workspace
encore-core = { path = "encore-core" }
encore-configuration = { path = "encore-configuration" }
encore-playlist = { path = "encore-playlist" }
encore-shared = { path = "encore-shared" }

# external dependencies
# TODO: put in places where it is used
getch-rs = "=0.2.0"
lazy_static = "1.5.0"
terminal_size = { version = "0.3.0", default-features = false }

# [dependencies]
encore-core = { path = "encore-core" }
encore-shared = { path = "encore-shared" }

# [profile.dev]
# incremental = true
# codegen-backend = "cranelift"

# [profile.dev.package."*"]
# opt-level = 'z'

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.profiling]
inherits = "release"
debug = true
strip = false

