cargo-features = ["codegen-backend"]

[workspace]
resolver = "2"
# `encore-*` instead?
members = [
    "encore-configuration",
    "encore-playlist",
    "encore-shared",
    "encore-core",
    "encore-audio",
    "encore-static",
    "encore-cli",
]

[workspace.dependencies]
# encore workspace
encore-core = { path = "encore-core" }
encore-configuration = { path = "encore-configuration" }
encore-playlist = { path = "encore-playlist" }
encore-shared = { path = "encore-shared" }
encore-static = { path = "encore-static" }
encore-audio = { path = "encore-audio" }

encore-cli = { path = "encore-cli" }

# external dependencies
# TODO: put in places where it is used
lazy_static = "1.5.0"

[profile.dev]
incremental = true
codegen-backend = "cranelift"

[profile.dev.package."*"]
opt-level = 'z'

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.profiling]
inherits = "release"
debug = true
strip = false

