[package]
name = "encore-audio"
version = "0.1.0"
edition = "2024"

[dependencies]
encore-static.workspace = true
# mp3 support is huge. don't compile it if you don't plan on playing any mp3s.
# or you can trade binary size for memory leaks by using `minimp3` instead.
rodio = { git = "https://codeberg.org/a-catgirl/encore-rodio.git", rev = "01e5b9bf6b", features = ["mp3", "symphonia-flac", "vorbis", "wav"] }
