cargo-features = ["codegen-backend"]

[package]
name = "encore-core"
version = "0.2.0-canary.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "encore core startup and logic functionality"

[[bin]]
name = "encore"
path = "src/main.rs"

[dependencies]
# encore workspace
encore-configuration = { path = "../encore-configuration" }
encore-playlist = { path = "../encore-playlist" }
encore-shared = { path = "../encore-shared" }
encore-static.workspace = true
encore-audio.workspace = true
encore-cli.workspace = true

# external dependencies
# TODO: put in places where it is used
lazy_static.workspace = true

# Optionals
# Configuration Support
basic-toml = { version = "0.1.9", optional = true }
serde = { version = "1.0.210", optional = true, features = ["serde_derive"] }
# mp3 support is huge. don't compile it if you don't plan on playing any mp3s.
# or you can trade binary size for memory leaks by using `minimp3` instead.
dhat = { version = "0.3.3", optional = true }
# souvlaki = { path = "../encore-souvlaki", optional = true }
souvlaki = { git = "https://codeberg.org/a-catgirl/encore-souvlaki.git", rev = "a24f6296e9", optional = true }

# [profile.dev]
# incremental = true
# codegen-backend = "cranelift"

# [profile.dev.package."*"]
# opt-level = 'z'

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.profiling]
inherits = "release"
debug = true
strip = false

[features]
default = [ "mpris" ]
configuration = [ "basic-toml", "serde", "encore-shared/configuration" ]
dhat-heap = [ "dhat" ]
mpris = [ "souvlaki" ]

